# Investment_Valuation_Agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PRD.md  README.md  SECURITY.md  TRANSFER_GUIDE.md  TRANSFER_STEPS.md  analyze_excel.py  extract_chat.py  extract_sessions.py  final_test.xlsx  gateway_model_config.md  git_rollback.md  opus47_gateway_fix.md  session_context_2026-04-19.md  start.txt  start_claude copy.sh  start_claude.sh  test_wb3.xlsx  test_workbook.xlsx  test_workbook2.xlsx  thinking_proxy.py
backend/: pyproject.toml
backend/api/: admin.py  database.py  export.py  export_workbook.py  main.py  routes.py  session_store.py
backend/data_sources/: capiq_adapter.py  capiq_excel_automation.py  capiq_formula_map.py  cost_of_capital_reference.json  damodaran_store.py  exchange_currency_map.py  industry_mapper.py  industry_stats.json  us_cn_hk_db.py  us_cn_hk_mapping.py
backend/engine/: company_metrics.py  data_dictionary.py  ltm_calculator.py  module_0_data_fetch.py  module_1_adjustments.py  module_2_risk.py  module_3_cashflow.py  module_4_dcf.py  module_5_multiples.py  module_6_options.py  orchestrator.py  segment_resolver.py  sensitivity_ranges.py  source_tracker.py
backend/tests/: test_global_ticker_lookup.py  test_us_cn_hk_mapping.py
backend/tools/: analyze_damodaran.py  audit_segment_coverage.py  build_ginzu_input_packages.py  build_ginzu_prefilled_workbooks.py  build_seed_database.py  diff_db_vs_template_paths.py  download_damodaran.py  extract_ginzu_formulas.py  extract_industry_stats.py  fetch_via_template.py  (+7 more)
(+337 files in other folders)
