[project]
name = "valuation-engine"
version = "0.1.0"
description = "Investment Valuation Automation System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pandas>=2.1",
    "pywin32>=306",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
